--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,8 +6,10 @@ name: Node.js CI
 on:
   push:
     branches: [ develop ]
+    paths: "ui"
   pull_request:
     branches: [ develop ]
+    paths: "ui"
 
 jobs:
   build:
