--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,3 +17,5 @@ jobs:
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag mjp91/phoenix:$RELEASE_VERSION
+    - name: Push the Docker image
+      run: docker push mjp91/phoenix:$RELEASE_VERSION
